# systemd-tray

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: services.yaml.example
systemd_tray/: __init__.py  config.py  configurator_dialog.py  icon_utils.py  log_window.py  main.py  services_panel.py  systemd_backend.py
